hyphenate circuit-building

--- a/docs/guides/map-problem-to-circuits.mdx
+++ b/docs/guides/map-problem-to-circuits.mdx
@@ -41,7 +41,7 @@ The output of this step in a Qiskit pattern is normally a collection of circuits
 * [Specifying observables in the Pauli basis](./specify-observables-pauli)
 * [The Operator class](./operator-class)
 
-### Other circuit building tools
+### Other circuit-building tools
 * [Pulse schedules](./pulse)
 * OpenQASM
   * [Introduction to OpenQASM](./introduction-to-qasm)
