--- a/docs/migration-guides/qiskit-runtime.mdx
+++ b/docs/migration-guides/qiskit-runtime.mdx
@@ -82,7 +82,7 @@ See the following topic for instructions if you are using a third-party provider
 
 The following migration guides can help users with the following tasks:
 
-- [Transition to the Qiskit Runtime provider](/migration-guides/qiskit-runtime)
+- [Transition from `backend.run` to primitives](/migration-guides/qiskit-runtime)
 - [Update user code to the V2 primitives interface](/migration-guides/v2-primitives)
 
 ## Next steps
