--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -56,7 +56,7 @@
    "id": "b32bff85-1760-4296-8f5b-ea6e5c942bbe",
    "metadata": {},
    "source": [
-    "This example demonstrates how to use `qiskit-serverless` tools to create a parallel transpilation program, and then implement `qiskit-ibm-catalog` to deploy your program to IBM Quantum; Platform to use as a reusable remote service."
+    "This example demonstrates how to use `qiskit-serverless` tools to create a parallel transpilation program, and then implement `qiskit-ibm-catalog` to deploy your program to IBM Quantum Platform to use as a reusable remote service."
    ]
   },
   {
