--- a/docs/guides/job-limits.mdx
+++ b/docs/guides/job-limits.mdx
@@ -7,13 +7,6 @@ description: Job limits imposed by the job validation service for jobs sent to I
 
 When you send a job to an IBM&reg; QPU, it is first sent to the job validation service.  This service tries to ensure that the job will be able to run on the QPU so you don't have to wait for it to go through the queue and then have the job fail.  These checks include enforcing the described limits.
 
-<Admonition type="note">
-Certain primitive options increase the circuit size. The described limits are checked *after* the expected increase in circuit size. In particular, these options increase circuit size:
-
-- Dynamical decoupling and twirling introduce additional single-qubit gates.
-- Gate-folding ZNE introduces additional two-qubit gates. The number of two-qubit gates is multiplied by the sum of noise factors requested in gate-folding ZNE.
-</Admonition>
-
 <span id="max-shots"></span>
 ## Maximum executions
 
@@ -22,7 +15,18 @@ At most, **10 million** executions are allowed.  The number of executions is the
 For example, if you have a PUB with one circuit, observables with shape (1, 6), and parameters with shape (4, 1), this would render $4 \times 6 = 24$ circuits (or fewer, if some observables commute). If you requested 2,000 shots, then the total number of executions is $24 \times 2,000 = 48,000$.
 
 <span id="2-qubit-limit"></span>
-## Maximum number of two-qubit gates per circuit
+## Maximum number of single- and two-qubit gates per circuit
 
+
+<Admonition type="note">
+Certain primitive options increase the circuit size. The described limits are checked *after* the expected increase in circuit size. In particular, these options increase circuit size:
+
+- Dynamical decoupling and twirling introduce additional single-qubit gates.
+- Gate-folding ZNE introduces additional two-qubit gates. The number of two-qubit gates is multiplied by the sum of noise factors requested in gate-folding ZNE.
+</Admonition>
+
+The maximum number of single qubit gates are as follows:
+- 2.4 million RZ gates
+- 1.6 million SX gates
 The maximum number of two-qubit gates per circuit is 400,000 for static circuits and 100,000 for dynamic circuits.
-This ensures that the job can be manipulated within the memory limits of the low-level software stack. The precise limit depends on the options selected in the Sampler or Estimator query. However, if a job has fewer than 10,000 two-qubit gates, it will pass validation. Some options might allow more, and the service will calculate the limit allowed for the user-selected options and communicate that should your job be rejected in validation.
+This ensures that the job can be manipulated within the memory limits of the low-level software stack.
