Fixes for new topics (#2756)
I walked through all of the topics that use cloudcontent tags to make
sure there was no funny business. Then I fixed any funny business that I
found.

---------

Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/map-problem-to-circuits.mdx
+++ b/docs/guides/map-problem-to-circuits.mdx
@@ -41,13 +41,13 @@ The output of this step in a Qiskit pattern is normally a collection of circuits
 * [Specifying observables in the Pauli basis](./specify-observables-pauli)
 * [The Operator class](./operator-class)
 
-### Other circuit building tools
+### Other circuit-building tools
 * [Pulse schedules](./pulse)
 * OpenQASM
-  * [Intro to OpenQASM](./introduction-to-qasm)
+  * [Introduction to OpenQASM](./introduction-to-qasm)
   * [OpenQASM 2 and the Qiskit SDK](./interoperate-qiskit-qasm2)
   * [OpenQASM 3 and the Qiskit SDK](./interoperate-qiskit-qasm3)
   * [OpenQASM 3 feature table](./qasm-feature-table)
   * [OpenQASM 3.x live specification](https://openqasm.com/)
-* [MPF Qiskit Addon](/guides/qiskit-addons-mpf)
+* [MPF Qiskit addon](/guides/qiskit-addons-mpf)
   * [Get started with MPF](/guides/qiskit-addons-mpf-get-started)
