--- a/docs/guides/execution-modes-rest-api.mdx
+++ b/docs/guides/execution-modes-rest-api.mdx
@@ -5,6 +5,17 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 
 # Execution modes using REST API
 
+<LegacyContent>
+<Admonition type="note">
+This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/execution-modes-rest-api)
+</Admonition>
+</LegacyContent>
+<CloudContent>
+<Admonition type="note">
+This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/execution-modes-rest-api)
+</Admonition>
+</CloudContent>
+
 You can run your Qiskit primitive workloads using REST APIs in one of three execution modes, depending on your needs: job, session, and batch. This topic explains these modes.
 
 <Admonition type="note">
@@ -19,11 +30,15 @@ In job mode, a single primitive request of the Estimator or the Sampler is made 
 
 A session is a Qiskit Runtime feature that lets you efficiently run multi-job iterative workloads on quantum computers. Using sessions helps avoid delays caused by queuing each job separately, which can be particularly useful for iterative tasks that require frequent communication between classical and quantum resources. More details about Sessions can be found in the [documentation](./execution-modes).
 
-<CloudContent>Note that Open Plan users cannot submit session jobs.</CloudContent>
+<CloudContent>
+<Admonition type="note">
+Open Plan users cannot submit session jobs.
+</Admonition>
+</CloudContent>
 
 ### Start a session
 
-Begin with creating a session and obtaining a session ID.
+Begin by creating a session and obtaining a session ID.
 
 <LegacyContent>
 ```python
@@ -44,7 +59,7 @@ payload = json.dumps({
   "instance": "hub1/group1/project1",
 })
 
-response = requests.request("POST", sessionsUrl, data=payload,  headers=headersList)
+response = requests.request("POST", sessionsUrl, data=payload, headers=headersList)
 
 sessionId = response.json()['id']
 
@@ -144,7 +159,7 @@ Session closure response ok?: True
 
 ## Batch mode with REST API
 
-Alternatively, you can submit a batch job by specifying the `mode` in the request payload. Batch mode can help shorten processing time if all jobs can be provided at the outset. More details about batch mode can be found in the [documentation](./run-jobs-batch).
+Alternatively, you can submit a batch job by specifying the `mode` in the request payload. Batch mode can help shorten processing time if all jobs can be provided at the outset. Learn about batch mode in the [introduction to execution modes](./execution-modes#batch-mode) guide.
 
 <LegacyContent>
 ```python
