--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -7,20 +7,29 @@
    "source": [
     "# Get started with primitives\n",
     "\n",
+    "<LegacyContent>\n",
+    "<Admonition type=\"note\">\n",
+    "* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/get-started-with-primitives)\n",
+    " * While this documentation uses the primitives from Qiskit Runtime, which allow you to use IBM&reg; backends, the primitives can be run on any provider by using the [backend primitives](#backend) instead.  Additionally, you can use the *reference* primitives to run on a local statevector simulator.  See [Exact simulation with Qiskit primitives](/guides/simulate-with-qiskit-sdk-primitives) for details.\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/get-started-with-primitives)\n",
+    "* While this documentation uses the primitives from Qiskit Runtime, which allow you to use IBM&reg; backends, the primitives can be run on any provider by using the [backend primitives](#backend) instead.  Additionally, you can use the *reference* primitives to run on a local statevector simulator.  See [Exact simulation with Qiskit primitives](/guides/simulate-with-qiskit-sdk-primitives) for details.\n",
+    "</Admonition>\n",
+    "</CloudContent>\n",
+    "\n",
     "The steps in this topic describe how to set up primitives, explore the options you can use to configure them, and invoke them in a program.\n",
     "\n",
-    "<Admonition type=\"note\">\n",
-    "    While this documentation uses the primitives from Qiskit Runtime, which allow you to use IBM&reg; backends, the primitives can be run on any provider by using the [backend primitives](#backend) instead.  Additionally, you can use the *reference* primitives to run on a local statevector simulator.  See [Exact simulation with Qiskit primitives](simulate-with-qiskit-sdk-primitives) for details.\n",
-    "</Admonition>\n",
-    "\n",
     "<Admonition type=\"note\" title=\"Using Fractional Gates\">\n",
-    "    If you wish to use the newly supported [fractional gates](./fractional-gates), you will need to set `use_fractional_gates=True` when requesting a backend from a `QiskitRuntimeService` instance. For example:\n",
+    "    To use the newly supported [fractional gates](./fractional-gates), set `use_fractional_gates=True` when requesting a backend from a `QiskitRuntimeService` instance. For example:\n",
     "    ```python\n",
     "    service = QiskitRuntimeService()\n",
     "    fractional_gate_backend = service.least_busy(use_fractional_gates=True)\n",
     "    ```\n",
     "\n",
-    "    However, note that this is an experimental feature and may change in the future.\n",
+    "    Note that this is an experimental feature and might change in the future.\n",
     "</Admonition>"
    ]
   },
