--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -7,23 +7,19 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 # Run jobs in a session
 
 <LegacyContent>
-<Admonition type="note">
-This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/run-jobs-session)
+<Admonition type="note" title="Notes">
+* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/run-jobs-session)
+* Session execution mode is not supported in the Open Plan. Jobs will run in job mode instead.
 </Admonition>
 </LegacyContent>
 <CloudContent>
-<Admonition type="note">
-This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/run-jobs-session)
+<Admonition type="note" title="Notes">
+* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/run-jobs-session)
+* Open Plan users cannot submit session jobs. Workloads must be run in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
-Use sessions when you need dedicated and exclusive access to the QPU.
-<LegacyContent>
-<Admonition type="note">
-Session execution mode is not supported in the Open Plan. Jobs will run in job mode instead.
-</Admonition>
-</LegacyContent>
-<CloudContent>Note that Open Plan users cannot submit session jobs.</CloudContent>
 
+Use sessions when you need dedicated and exclusive access to the QPU.
 
 ## Set up to use sessions
 
@@ -49,7 +45,7 @@ If you open a session but do not submit any jobs to it for 30 minutes, the sessi
 
 <CloudContent>
 <Admonition type="caution">
-The following code block will return an error for users on the Open Plan, because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
+The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
 
@@ -70,7 +66,7 @@ The context manager automatically opens and closes the session.
 
 <CloudContent>
 <Admonition type="caution">
-The following code block will return an error for users on the Open Plan, because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
+The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
 
@@ -92,7 +88,7 @@ This timer starts when the session starts.  When the value is reached, the sessi
 
 <CloudContent>
 <Admonition type="caution">
-The following code block will return an error for users on the Open Plan, because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
+The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
 
@@ -136,7 +132,7 @@ A session automatically closes when it exits the context manager. When the sessi
 
 <CloudContent>
 <Admonition type="caution">
-The following code block will return an error for users on the Open Plan, because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
+The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
 
@@ -157,7 +153,7 @@ If you are not using a context manager, manually close the session to avoid unwa
 
 <CloudContent>
 <Admonition type="caution">
-The following code block will return an error for users on the Open Plan, because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
+The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
 
@@ -199,7 +195,7 @@ For a comprehensive overview of a session's configuration and status, use the  `
 
 <CloudContent>
 <Admonition type="caution">
-The following code block will return an error for users on the Open Plan, because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
+The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
 
@@ -221,7 +217,7 @@ Example: Run an iterative workload that uses the classical SciPy optimizer to mi
 
 <CloudContent>
 <Admonition type="caution">
-The following code block will return an error for users on the Open Plan, because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
+The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
 
@@ -251,7 +247,7 @@ You can get more out of a session by running multiple workloads simultaneously. 
 
 <CloudContent>
 <Admonition type="caution">
-The following code block will return an error for users on the Open Plan, because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
+The following code block will return an error for users on the Open Plan because it uses sessions. Workloads on the Open Plan can run only in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
 
