--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -6,7 +6,7 @@ description: Introduction to primitives in Qiskit and Qiskit Runtime, and an exp
 
 # Introduction to primitives
 
-## Why does Qkiskit use primitives?
+## Why does Qiskit use primitives?
 
 The `backend.run` interface was the primary access point to quantum hardware and simulators offered by IBM&reg;, as well as third-party providers that integrate with Qiskit. The evolution of user access patterns for quantum processing units (QPUs) led to the Qiskit primitives (`Sampler` and `Estimator`) superseding this interface.
 
@@ -24,7 +24,7 @@ the Qiskit [primitives interface](/primitives), which is optimized for two core 
 expectation value estimation (`Estimator`) and circuit sampling (`Sampler`). The goal is once
 again to help developers to focus more on innovation and less on data conversion.
 
-## What is a primitve?
+## What is a primitive?
 
 Computing systems are built on multiple layers of abstraction. Abstractions allow you to focus on a
 particular level of detail relevant to the task at hand. The closer you get to the hardware,
