--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -20,7 +20,7 @@ to operate on a familiar data format and focus on the bigger picture.
 
 As access to QPUs became more widespread, and with more quantum algorithms being developed,
 again the need for a higher-level abstraction emerged. In response, IBM introduced
-the Qiskit [primitives interface](/primitives), which is optimized for two core tasks in quantum algorithm development:
+the Qiskit primitives interface, which is optimized for two core tasks in quantum algorithm development:
 expectation value estimation (`Estimator`) and circuit sampling (`Sampler`). The goal is once
 again to help developers to focus more on innovation and less on data conversion.
 
