--- a/docs/migration-guides/qiskit-backendv1-to-v2.mdx
+++ b/docs/migration-guides/qiskit-backendv1-to-v2.mdx
@@ -82,7 +82,7 @@ Scroll to the right to see important notes.
 |`configuration().dtm`|`dtm` | |
 |`configuration().max_experiments` |`max_circuits` | |
 |`configuration().online_date` | `online_date`| |
-|`InstructionDurations.from_backend(backend)`|`backend.instruction_durations`| |
+|`InstructionDurations.`  \n`from_backend(backend)`|`backend.instruction_durations`| |
 |`defaults().instruction_schedule_map`|`instruction_schedule_map`| |
 |`properties().t1(0)`|`qubit_properties(0).t1`| |
 |`properties().t2(0)`|`qubit_properties(0).t2`| |
