--- a/docs/guides/configure-error-suppression.mdx
+++ b/docs/guides/configure-error-suppression.mdx
@@ -35,7 +35,7 @@ sampler = Sampler(backend)
 sampler.options.dynamical_decoupling.enable = True
 sampler.options.dynamical_decoupling.sequence_type = "XpXm"
 
-print(f"dynamical decoupling sequence to use: {sampler.options.dynamical_decoupling.sequence_type}")
+print(f">>> dynamical decoupling sequence to use: {sampler.options.dynamical_decoupling.sequence_type}")
 ```
 
 <CodeAssistantAdmonition
