--- a/docs/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/migration-guides/qiskit-runtime-examples.mdx
@@ -216,11 +216,11 @@ job = estimator.run([(isa_circuit, isa_observable)])
 # Get results for the first (and only) PUB
 pub_result = job.result()[0]
 
-print(f"Expectation value: {pub_result.data.evs}")
+print(f">>> Expectation value: {pub_result.data.evs}")
 ```
 Output
 ```text
- Expectation value: [-0.8879899326312926]
+>>> Expectation value: [-0.8879899326312926]
 ```
   </TabItem>
 
@@ -250,7 +250,7 @@ expectation_value = sampler.eval().real
 ```
 
 ``` python
-print("expectation: ", expectation_value")
+print("expectation: ", expectation_value)
 expectation:  -1.065734058826613
 ```
   </TabItem>
