--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9a901271",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
     "job = estimator.run([(isa_circuit, mapped_observables)])\n",
     "\n",
     "# Use the job ID to retrieve your job data later\n",
-    "print(f\"Job ID: {job.job_id()}\")"
+    "print(f\">>> Job ID: {job.job_id()}\")"
    ]
   },
   {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "428f05e7",
    "metadata": {},
    "outputs": [],
