Remove REPL prompts (`>>>`) from code examples (#2698)
Hi @frankharkins @Eric-Arellano,  
Apologies, my previous PR (#2630) was mistakenly closed before merging.
I have created this new PR with the same changes.  
Please review when you get a chance. Thanks!

---------

Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/docs/migration-guides/qiskit-runtime-use-case.mdx
+++ b/docs/migration-guides/qiskit-runtime-use-case.mdx
@@ -262,7 +262,7 @@ isa_circuit = pm.run(circuit)
 
 result = backend.run(isa_circuit, shots=10, meas_level=1, meas_return="avg").result()
 
->>> print("result: ", result)
+print("result: ", result)
 ```
   </TabItem>
 </Tabs>
